# Drishti-AI

./: README.md  index.html  package.json  pnpm-lock.yaml
backend/: anomalies.py  main.py  pyproject.toml  util.py
src/: App.tsx  index.css  main.tsx
src/components/: AlertCard.tsx  IntentGauge.tsx  LiveStream.tsx
src/components/dashboard/: AIAnalysisPanel.tsx  ActionHistory.tsx  AlertDetail.tsx  AlertsFeed.tsx  DashboardLayout.tsx  HardwareProximity.tsx  IngestFlow.tsx  KavachActions.tsx  Sidebar.tsx  Topbar.tsx
src/components/landing/: ConsensusSection.tsx  Footer.tsx  Hero.tsx  ImpactSection.tsx  InfrastructureSection.tsx  KavachSection.tsx  LandingPage.tsx  ProblemSection.tsx  SolutionSection.tsx
src/components/map/: RailwayMap.tsx  TrackOnlyMap.tsx
src/components/simulation/: HardwareReadings.tsx  SimulationPanel.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Divider.tsx  EmptyState.tsx  ErrorState.tsx  Layouts.tsx  LoadingState.tsx  NotificationConnector.tsx  NotificationToast.tsx
src/context/: NotificationContext.tsx  SimulationContext.tsx
src/lib/: api.ts
src/pages/: SystemStatus.tsx  dashboard.tsx
src/pages/dashboard/: ActionHistoryPage.tsx  DashboardMain.tsx  HardwareHealth.tsx  IncidentDetails.tsx  LiveAlerts.tsx  Map.tsx  MapPage.tsx  Overview.tsx  SensorHealth.tsx  Simulation.tsx  SimulationPage.tsx
src/services/: api.ts  mockBackend.ts
src/services/api/: index.ts  types.ts
src/styles/: leaflet.css
src/types/: index.ts  mapTypes.ts  simulationTypes.ts
