[project]
name = "drishti-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "numpy>=2.4.1",
    "opencv-python>=4.11.0.86",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.21",
    "pywavelets>=1.9.0",
    "scipy>=1.17.0",
    "ultralytics>=8.3.252",
    "uvicorn>=0.40.0",
]
